@@ -2,6 +2,7 @@ package edu.stanford.irt.laneweb.eresources;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -16,11 +17,11 @@ import edu.stanford.irt.laneweb.solr.SolrService;
 
 public class BrowseEresourcesGenerator extends AbstractEresourcesGenerator {
 
-    private static final String ALL = "all";
+    private static final String DEFAULT_ALPHA = "a";
+
+    private static final String UTF_8 = StandardCharsets.UTF_8.name();
 
     private String alpha;
-
-    private String subset;
 
     private String type;
 
@@ -33,12 +34,11 @@ public class BrowseEresourcesGenerator extends AbstractEresourcesGenerator {
     public void setModel(final Map<String, Object> model) {
         super.setModel(model);
         this.type = ModelUtil.getString(model, Model.TYPE);
-        this.subset = ModelUtil.getString(model, Model.SUBSET);
-        this.alpha = ModelUtil.getString(model, Model.ALPHA, ALL);
+        this.alpha = ModelUtil.getString(model, Model.ALPHA, DEFAULT_ALPHA);
         if (this.alpha.length() == 0) {
-            this.alpha = ALL;
+            this.alpha = DEFAULT_ALPHA;
         }
-        if (!ALL.equals(this.alpha) && this.alpha.length() > 1) {
+        if (this.alpha.length() > 1) {
             this.alpha = this.alpha.substring(0, 1);
         }
     }
@@ -49,45 +49,12 @@ public class BrowseEresourcesGenerator extends AbstractEresourcesGenerator {
         if (parameters.containsKey(Model.TYPE)) {
             this.type = decode(parameters.get(Model.TYPE));
         }
-        if (parameters.containsKey(Model.SUBSET)) {
-            this.subset = decode(parameters.get(Model.SUBSET));
-        }
     }
 
     @Override
     protected StringBuilder createKey() {
-        return super.createKey().append(";a=").append(null == this.alpha ? "" : this.alpha).append(";t=")
-                .append(null == this.type ? "" : this.type).append(";s=")
-                .append(null == this.subset ? "" : this.subset);
-    }
-
-    @Override
-    protected List<Eresource> getEresourceList(final SolrService solrService) {
-        List<Eresource> list = null;
-        if (this.subset == null && this.type == null) {
-            list = Collections.emptyList();
-        } else if (this.subset == null && ALL.equals(this.alpha)) {
-            list = solrService.getType(this.type);
-        } else if (this.subset == null) {
-            list = solrService.getType(this.type, this.alpha.charAt(0));
-        } else {
-            list = solrService.getSubset(this.subset);
-        }
-        return list;
-    }
-
-    @Override
-    protected String getHeading() {
-        String heading = null;
-        if (this.subset == null && this.type.indexOf("software, installed") == -1) {
-            heading = this.alpha.toUpperCase();
-        }
-        return heading;
-    }
-
-    @Override
-    protected PagingData getPagingData(final List<Eresource> eresources, final int page, final String baseQuery) {
-        return new EresourceListPagingData(eresources, page, baseQuery, this.alpha);
+        return super.createKey().append(";a=").append(this.alpha).append(";t=")
+                .append(null == this.type ? "" : this.type);
     }
 
     /**
@@ -97,11 +64,36 @@ public class BrowseEresourcesGenerator extends AbstractEresourcesGenerator {
      *            a string to decode
      * @return the decoded string
      */
-    private String decode(final String string) {
+    protected String decode(final String string) {
         try {
-            return URLDecoder.decode(string, "UTF-8");
+            return URLDecoder.decode(string, UTF_8);
         } catch (UnsupportedEncodingException e) {
             throw new LanewebException("won't happen", e);
         }
+    }
+
+    @Override
+    protected List<Eresource> getEresourceList(final SolrService solrService) {
+        List<Eresource> list;
+        if (this.type == null) {
+            list = Collections.emptyList();
+        } else {
+            list = solrService.getType(this.type, this.alpha.charAt(0));
+        }
+        return list;
+    }
+
+    @Override
+    protected String getHeading() {
+        String heading = null;
+        if (this.type.indexOf("software, installed") == -1) {
+            heading = this.alpha.toUpperCase();
+        }
+        return heading;
+    }
+
+    @Override
+    protected PagingData getPagingData(final List<Eresource> eresources, final int page, final String baseQuery) {
+        return new EresourceListPagingData(eresources, page, baseQuery, this.alpha);
     }
 }
